# YAHOOK

./: .gitignore  CMakeLists.txt  README.md  hook-test.cpp  hook.cpp  hook.h  jni-export.cpp  mm.cpp  mm.h
example/: hook-example.cpp
